<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">ScreenInfo</string>
    <string name="about_menu">About</string>
    <string name="share_menu">Share</string>
    <string name="about_title">ScreenInfo</string>
    <string name="version">Version</string>
    <string name="share_summary_subject">Display report from ScreenInfo</string>
    <string name="share_title">Share Report To</string>
    <string name="about">Displays the screen configuration parameters for an Android device.</string>
    <string name="email">Email: info@jotabout.com</string>
    <string name="blog">Blog: digitaldumptruck.jotabout.com</string>
    <string name="about_dismiss">That\'s nice</string>
    <string name="play_store_link">Report prepared by ScreenInfo. Get yourself a copy: https://play.google.com/store/apps/details?id=com.jotabout.screeninfo</string>
    <string name="device_label">Device Name:</string>
    <string name="os_version_label">Android Version:</string>
    <string name="resource_selection_label">Framework resource selection</string>
    <string name="screen_class_label">Screen class:</string>
    <string name="density_class_label">Density class:</string>
    <string name="width_pixels_label">App-usable Width (px):</string>
    <string name="height_pixels_label">App-usable Height (px):</string>
    <string name="width_dp_label">Width (dp):</string>
    <string name="height_dp_label">Height (dp):</string>
    <string name="smallest_dp_label">Smallest DP:</string>
    <string name="screen_dpi_label">Screen DPI:</string>
    <string name="actual_xdpi_label">X DPI:</string>
    <string name="actual_ydpi_label">Y DPI:</string>
    <string name="logical_density_label">Logical Density:</string>
    <string name="font_scale_density_label">Font Scale Density:</string>
    <string name="computed_diagonal_size_inches_label">Calculated Diagonal (inches):</string>
    <string name="computed_diagonal_size_mm_label">Calculated Diagonal (mm):</string>
    <string name="touchscreen_label">Touchscreen:</string>
    <string name="touchscreen_none">None</string>
    <string name="touchscreen_finger">Finger</string>
    <string name="touchscreen_stylus">Stylus</string>
    <string name="natural_orientation_label">Natural Orientation:</string>
    <string name="current_orientation_label">Current Orientation:</string>
    <string name="orientation_square">Square</string>
    <string name="orientation_landscape">Landscape</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="long_wide_label">Long or Wide:</string>
    <string name="pixel_format_label">Pixel Format:</string>
    <string name="refresh_rate_label">Refresh Rate (fps):</string>
    <string name="total_width_pixels_label">Total Width (px):</string>
    <string name="total_height_pixels_label">Total Height (px):</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="undefined">Undefined</string>
    <string name="unknown">Unknown</string>
    <string name="unsupported">Not Available</string>
</resources>
